# email_reader

./: .env  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
email_messages/: admin.py  apps.py  consumers.py  models.py  urls.py  views.py
email_messages/migrations/: 0001_initial.py
email_messages/templates/email_messages/: message_list.html  websocket.js
email_reader/: asgi.py  settings.py  urls.py  wsgi.py
